implemented user delete
